add streamlit app

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,10 @@ logs/
 old_test/
 data_input/
 data_example_video/
+LongVideoBench/
+outputs/
+multimodal_merged_pipeline.ipynb
+uploaded_audio/
+uploaded_videos/
+finevideo/
+data/
