--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
   "pillow>=10.0.0",
   "transformers>=4.40.0",
   "sentencepiece>=0.1.99",
-  "PyYAML>=6.0.1"
+  "PyYAML>=6.0.1",
+  "diffusers>=0.36.0",
 ]
 
 [project.optional-dependencies]
